[package]
name = "fstl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[bench]]
name = "bench"
harness = false

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3
